// protoc -I=/source/proto/ --go_out=/ --go-grpc_out=/ /source/proto/database/post.proto
syntax = "proto3";

option go_package = "source/user-api-gateway/proto";

package proto;

service RegisterService{
    rpc SetRegister(RegisterRequest) returns (RegisterReply) {};
}

// account is email addr.
message RegisterRequest{
    string account = 1;
    string name = 2;
    string password = 3;
    string confirmPassword = 4;
}

// if login success, return true
message RegisterReply{
    bool success = 1;
}
